# OpenGL_study

./: CMakeLists.txt  glad.c  main.cpp
application/: CMakeLists.txt
application/camera/include/: camera.h  cameraControl.h  orthographicCamera.h  perspectiveCamera.h
application/camera/src/: camera.cpp  cameraControl.cpp  orthographicCamera.cpp  perspectiveCamera.cpp
application/include/: Application.h
application/src/: Application.cpp
assets/shaders/: fragment.glsl  vertex.glsl
glframework/: CMakeLists.txt
glframework/include/: core.h  shader.h  texture.h
glframework/src/: shader.cpp  texture.cpp
wrapper/: CMakeLists.txt
wrapper/include/: checkError.h
wrapper/src/: checkError.cpp
